--- a/Solutions/.editorconfig
+++ b/Solutions/.editorconfig
@@ -77,4 +77,4 @@ dotnet_style_qualification_for_property = true:suggestion
 dotnet_style_qualification_for_event = true:suggestion
 
 # Style - using
-csharp_using_directive_placement = inside_namespace:warning
+csharp_using_directive_placement = outside_namespace:warning
