--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.AppScope/Corvus.Storage.Examples.ConsoleApp.AppScope.csproj
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.AppScope/Corvus.Storage.Examples.ConsoleApp.AppScope.csproj
@@ -3,20 +3,14 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+    <RestoreLockedMode Condition="'$(ContinuousIntegrationBuild)' == 'true'">true</RestoreLockedMode>
     
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    
-    <!-- Disabling SA1204 because it prioritizes static/non-static over public/non-public, which doesn't fit very well
-         with bindings in SpecFlow.
-         Disabling SA1600, SA1602 (all public types and members to be documented) because test projects need to make lots of types
-         public for technical reasaons, but they are not meant for public consumption, so XML doc comments are only
-         appropriate if they aid understanding within the project.
-    -->
-    <NoWarn>SA0001;SA1204;SA1600;SA1602;CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,8 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.19" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
