Use Corvus.Identity v3 preview

--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -10,5 +10,9 @@
         "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
       }
     }
+  },
+
+  "ServiceIdentity": {
+    "IdentitySourceType": "AzureIdentityDefaultAzureCredential"
   }
 }
