--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
-    <PackageReference Include="Corvus.Identity.Azure" Version="2.0.0" />
+    <PackageReference Include="Corvus.Identity.Azure" Version="3.0.0-identity-configuration.3" />
     <PackageReference Include="Endjin.RecommendedPractices" Version="1.3.0-PullRequest0026.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
