--- a/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
+++ b/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
@@ -8,6 +8,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageDescription></PackageDescription>
+    <PackageTags></PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
     <PackageReference Include="Endjin.RecommendedPractices" Version="1.3.0-PullRequest0026.3">
