--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -9,6 +9,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageDescription></PackageDescription>
+    <PackageTags></PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
     <PackageReference Include="Corvus.Identity.Azure" Version="3.0.0-identity-configuration.3" />
