Add support for config with access key in vault

--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Properties/launchSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Properties/launchSettings.json
@@ -11,6 +11,10 @@
     "ConnectionStringKeyVault": {
       "commandName": "Project",
       "commandLineArgs": "blob connection-string-key-vault"
+    },
+    "AccessKeyKeyVault": {
+      "commandName": "Project",
+      "commandLineArgs": "blob access-key-key-vault"
     }
   }
 }
