--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -9,6 +9,14 @@
         "SecretName": "IdgCorvusStorageTestConnectionString",
         "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
       }
+    },
+    "AccessKeyInKeyVault": {
+      "AccountName": "maridgtenancykrewaehqwd2",
+      "AccessKeyInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusStorageTestAccessKey",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
     }
   },
 
