Add Cosmos DB (SQL) support

--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -20,6 +20,21 @@
     }
   },
 
+  "Cosmos": {
+    "ConnectionStringInConfiguration": {
+      "ConnectionStringPlainText": "UseDevelopmentStorage=true",
+      "Database": "ToDoList"
+    },
+    "ConnectionStringInKeyVault": {
+      "ConnectionStringInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusCosmosTestConnectionString",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      },
+      "Database": "ToDoList"
+    }
+  },
+
   "ServiceIdentity": {
     "IdentitySourceType": "AzureIdentityDefaultAzureCredential"
   }
