--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
@@ -44,14 +44,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[6.0.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="[6.0.*,)" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
     <PackageReference Include="System.CommandLine.Hosting" Version="0.3.0-alpha.21216.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Storage.Examples.Azure.BlobStorage\Corvus.Storage.Examples.Azure.BlobStorage.csproj" />
+    <ProjectReference Include="..\Corvus.Storage.Examples.Azure.Cosmos\Corvus.Storage.Examples.Azure.Cosmos.csproj" />
   </ItemGroup>
 
   <ItemGroup>
