--- a/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
+++ b/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
     
@@ -49,11 +49,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="[3.1.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="[6.0.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="[6.0.*,)" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Corvus.Storage.Azure.BlobStorage\Corvus.Storage.Azure.BlobStorage.csproj" />
+    <ProjectReference Include="..\Corvus.Storage.Azure.Cosmos\Corvus.Storage.Azure.Cosmos.csproj" />
   </ItemGroup>
 
 </Project>
