--- a/Solutions/Corvus.Storage.Examples.Azure.Cosmos/Corvus.Storage.Examples.Azure.Cosmos.csproj
+++ b/Solutions/Corvus.Storage.Examples.Azure.Cosmos/Corvus.Storage.Examples.Azure.Cosmos.csproj
@@ -4,6 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <IsPackable>false</IsPackable>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
