--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -22,16 +22,25 @@
 
   "Cosmos": {
     "ConnectionStringInConfiguration": {
-      "ConnectionStringPlainText": "UseDevelopmentStorage=true",
-      "Database": "ToDoList"
+      "Database": "ToDoList",
+      "ConnectionStringPlainText": "UseDevelopmentStorage=true"
     },
     "ConnectionStringInKeyVault": {
+      "Database": "ToDoList",
       "ConnectionStringInKeyVault": {
         "VaultName": "endjintest",
         "SecretName": "IdgCorvusCosmosTestConnectionString",
         "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
-      },
-      "Database": "ToDoList"
+      }
+    },
+    "AccessKeyInKeyVault": {
+      "Database": "ToDoList",
+      "AccountUri": "https://idgconcurrencytests.documents.azure.com:443/",
+      "AccessKeyInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusCosmosTestAccessKey",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
     }
   },
 
