--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -20,6 +20,30 @@
     }
   },
 
+  "Cosmos": {
+    "ConnectionStringInConfiguration": {
+      "Database": "ToDoList",
+      "ConnectionStringPlainText": "UseDevelopmentStorage=true"
+    },
+    "ConnectionStringInKeyVault": {
+      "Database": "ToDoList",
+      "ConnectionStringInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusCosmosTestConnectionString",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
+    },
+    "AccessKeyInKeyVault": {
+      "Database": "ToDoList",
+      "AccountUri": "https://idgconcurrencytests.documents.azure.com:443/",
+      "AccessKeyInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusCosmosTestAccessKey",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
+    }
+  },
+
   "ServiceIdentity": {
     "IdentitySourceType": "AzureIdentityDefaultAzureCredential"
   }
