--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
