--- a/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
+++ b/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
@@ -48,9 +48,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.5" />
+    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="[6.0.*,)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="[6.0.*,)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[6.0.*,)" />
   </ItemGroup>
 
   <ItemGroup>
