Support more CosmosContainerConfiguration types
Added validation for CosmosContainerConfiguration similar to what we already had for BlobContainerConfiguration. Added tests for both validators.

--- a/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
+++ b/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
@@ -59,4 +59,9 @@
     <ProjectReference Include="..\Corvus.Storage.Azure.Cosmos\Corvus.Storage.Azure.Cosmos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Corvus\Storage\Azure\BlobStorage\ConfigurationValidation\" />
+    <Folder Include="Corvus\Storage\Azure\Cosmos\ConfigurationValidation\" />
+  </ItemGroup>
+
 </Project>
