--- a/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
+++ b/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
@@ -6,9 +6,6 @@
     <TargetFramework>net6.0</TargetFramework>
 
     <Nullable>enable</Nullable>
-
-    <!-- StyleCop is currently choking on record. Disabling AD1000;SA1649 seems to shut it up. -->
-    <NoWarn>AD1000;SA1649</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
-    <PackageReference Include="Endjin.RecommendedPractices" Version="1.3.0-PullRequest0026.3">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
