--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.Identity.Azure" Version="3.0.0" />
-    <PackageReference Include="Endjin.RecommendedPractices" Version="1.3.0-PullRequest0026.3">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
