--- a/Solutions/Corvus.Storage.Sql/Corvus.Storage.Sql.csproj
+++ b/Solutions/Corvus.Storage.Sql/Corvus.Storage.Sql.csproj
@@ -6,9 +6,6 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
-    <!-- StyleCop is currently choking on record. Disabling AD1000;SA1649 seems to shut it up. -->
-    <NoWarn>AD1000;SA1649</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -19,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Endjin.RecommendedPractices" Version="1.3.0-PullRequest0026.3">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
