--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/appSettings.json
@@ -46,5 +46,26 @@
 
   "ServiceIdentity": {
     "IdentitySourceType": "AzureIdentityDefaultAzureCredential"
+  },
+
+  "TableStorage": {
+    "ConnectionStringInConfiguration": {
+      "ConnectionStringPlainText": "UseDevelopmentStorage=true"
+    },
+    "ConnectionStringInKeyVault": {
+      "ConnectionStringInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusStorageTestConnectionString",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
+    },
+    "AccessKeyInKeyVault": {
+      "AccountName": "maridgtenancykrewaehqwd2",
+      "AccessKeyInKeyVault": {
+        "VaultName": "endjintest",
+        "SecretName": "IdgCorvusStorageTestAccessKey",
+        "VaultClientIdentity": { "IdentitySourceType": "AzureIdentityDefaultAzureCredential" }
+      }
+    }
   }
 }
