Update build process

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,11 @@ MigrationBackup/
 
 .docs/
 *.feature.cs
+
+# Cobertura code coverage file
+coverage.cobertura.xml
+
+# Scripted build artifacts
+/_codeCoverage
+/_packages
+*.sbom.*
