--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -3,8 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -16,13 +15,21 @@
     <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;NU1902;NU1903;</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;NU1902;NU1903;</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Corvus.Identity.Azure" Version="3.3.0" />
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.12">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[3.1.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[8.0.*,)" />
   </ItemGroup>
 
 </Project>
