Deal with nullability

--- a/Solutions/Corvus.Storage.Azure.Cosmos/Corvus.Storage.Azure.Cosmos.csproj
+++ b/Solutions/Corvus.Storage.Azure.Cosmos/Corvus.Storage.Azure.Cosmos.csproj
@@ -21,6 +21,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.46.0" />
+    <!--TODO Remove-->
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
