--- a/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
+++ b/Solutions/Corvus.Storage.Common/Corvus.Storage.Common.csproj
@@ -24,6 +24,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!--TODO REMOVE -->
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
     <PackageReference Include="Corvus.Identity.Azure" Version="3.3.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
