--- a/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
+++ b/Solutions/Corvus.Storage.Azure.BlobStorage/Corvus.Storage.Azure.BlobStorage.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+    <PackageReference Include="Corvus.Identity.Azure" Version="4.0.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
