--- a/Solutions/Corvus.Storage.Azure.TableStorage/Corvus.Storage.Azure.TableStorage.csproj
+++ b/Solutions/Corvus.Storage.Azure.TableStorage/Corvus.Storage.Azure.TableStorage.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
+    <PackageReference Include="Corvus.Identity.Azure" Version="4.0.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
