--- a/Solutions/Corvus.Storage.Benchmarks/Corvus.Storage.Benchmarks.csproj
+++ b/Solutions/Corvus.Storage.Benchmarks/Corvus.Storage.Benchmarks.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="Corvus.Identity.Azure" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
