--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Corvus.Identity.Azure" Version="4.0.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
