--- a/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
+++ b/Solutions/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration/Corvus.Storage.Examples.ConsoleApp.ExplicitConfiguration.csproj
@@ -4,10 +4,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-
+    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
-
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -21,12 +19,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.12">
+    <PackageReference Include="Corvus.Identity.Azure" Version="4.0.0" />
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[6.0.*,)" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="[6.0.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[8.0.*,)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="[8.0.*,)" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="System.CommandLine.Hosting" Version="0.4.0-alpha.22272.1" />
   </ItemGroup>
