--- a/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
+++ b/Solutions/Corvus.Storage.Specs/Corvus.Storage.Specs.csproj
@@ -51,9 +51,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="[8.0.*,)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="[8.0.*,)" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[8.0.*,)" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
-    <PackageReference Include="Reqnroll.NUnit" Version="2.4.1" />
+    <PackageReference Include="Corvus.Testing.ReqnRoll.NUnit" Version="4.0.5" />
   </ItemGroup>
 
   <ItemGroup>
