Switch to matrix build for x-plat testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,13 +58,21 @@ jobs:
 
   build:
     needs: prepareConfig
-    uses: endjin/Endjin.RecommendedPractices.GitHubActions/.github/workflows/scripted-build-pipeline.yml@main
+    uses: endjin/Endjin.RecommendedPractices.GitHubActions/.github/workflows/scripted-build-matrix-pipeline.yml@main
     with:
       netSdkVersion: '8.0.x'
       # additionalNetSdkVersion: '7.0.x'
       # workflow_dispatch inputs are always strings, the type property is just for the UI
       forcePublish: ${{ github.event.inputs.forcePublish == 'true' }}
       skipCleanup: ${{ github.event.inputs.skipCleanup == 'true' }}
+      enableCrossOsCaching: true
+      compilePhaseRunnerOs: ubuntu-latest
+      packagePhaseRunnerOs: ubuntu-latest
+      testPhaseMatrixJson: |
+        {
+          "os": ["windows-latest", "ubuntu-latest"],
+          "dotnetFramework": ["net8.0"]
+        }
       # testArtifactName: ''
       # testArtifactPath: ''
       compilePhaseEnv: ${{ needs.prepareConfig.outputs.RESOLVED_ENV_VARS }}
